force-app/main/default/objects/SR_Case_Nature__c/SR_Case_Nature__c.object-meta.xml
<CustomObject>
    <description>This table maintains the case nature info.</description>
    <label>SR Case Nature</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Case Nature ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>