force-app/main/default/objects/SR_Case_Nature__c/fields/Dept_Involved_Code__c.field-meta.xml
<CustomField>
    <fullName>Dept_Involved_Code__c</fullName>
    <label>Dept Involved Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>