force-app/main/default/objects/SR_Case_Nature__c/fields/Nature_Code__c.field-meta.xml
<CustomField>
    <fullName>Nature_Code__c</fullName>
    <label>Nature Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>