force-app/main/default/objects/SR_Case_Nature__c/fields/Nature_Ind__c.field-meta.xml
<CustomField>
    <fullName>Nature_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Y)es/N)o to indicate Case Nature 1 whether input</description>
    <label>Nature Ind</label>
    <type>Checkbox</type>
</CustomField>