force-app/main/default/objects/SR_Case_Nature__c/fields/Sub_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Sub_Case_ID__c</fullName>
    <label>Sub Case ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>