force-app/main/default/objects/SR_Case_Nature__c/fields/Sub_Nature_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Nature_Code__c</fullName>
    <label>Sub Nature Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>